[gd_scene load_steps=10 format=3 uid="uid://cdi77hs80voda"]

[ext_resource type="Script" uid="uid://81hjvo8cvkwp" path="res://GUI/settings menu/input_settings/input_menu.gd" id="1_ovigh"]
[ext_resource type="PackedScene" uid="uid://0tldi4hhu4fb" path="res://GUI/settings menu/input_settings/keybind_button.tscn" id="1_s8nf5"]
[ext_resource type="PackedScene" uid="uid://bd37pqsqhgli0" path="res://GUI/settings menu/input_settings/transform.blend" id="2_og0rt"]
[ext_resource type="Texture2D" uid="uid://b2fewa1xek3fv" path="res://GUI/settings menu/input_settings/transform_texture.png" id="3_cg3j7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wp673"]
bg_color = Color(0.6, 0.6, 0.6, 0)
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2h2af"]
shading_mode = 0
albedo_texture = ExtResource("3_cg3j7")
texture_filter = 0

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ia2eo"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_y3fu6"]
sky_material = SubResource("ProceduralSkyMaterial_ia2eo")

[sub_resource type="Environment" id="Environment_sapd5"]
sky = SubResource("Sky_y3fu6")
ambient_light_color = Color(1, 1, 1, 1)
glow_enabled = true

[node name="InputMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_ovigh")

[node name="settings" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="settings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wp673")

[node name="VBoxContainer" type="VBoxContainer" parent="settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Pitch"

[node name="Pitch" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="PitchUp" parent="settings/ScrollContainer/VBoxContainer/Pitch" instance=ExtResource("1_s8nf5")]
layout_mode = 2
text = "↑ Pitch Up"

[node name="ProgressBar" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Pitch"]
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="PitchDown" parent="settings/ScrollContainer/VBoxContainer/Pitch" instance=ExtResource("1_s8nf5")]
layout_mode = 2
text = "↓ Pitch Down"
action_name = "pitch_down"

[node name="ProgressBar2" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Pitch"]
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="Label2" type="Label" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Roll"

[node name="Roll" type="HBoxContainer" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Roll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RollLeft" parent="settings/ScrollContainer/VBoxContainer/Roll/VBoxContainer" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
text = "↺ Roll Left"
action_name = "roll_left"

[node name="ProgressBar3" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Roll/VBoxContainer"]
layout_mode = 2
max_value = 1.0
fill_mode = 1
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Roll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RollRight" parent="settings/ScrollContainer/VBoxContainer/Roll/VBoxContainer2" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
text = "↻ Roll Right"
action_name = "roll_right"

[node name="ProgressBar4" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Roll/VBoxContainer2"]
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="Label3" type="Label" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Yaw"

[node name="Yaw" type="HBoxContainer" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Yaw"]
layout_mode = 2
size_flags_horizontal = 3

[node name="YawLeft" parent="settings/ScrollContainer/VBoxContainer/Yaw/VBoxContainer" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
text = "← Yaw Left"
action_name = "yaw_left"

[node name="ProgressBar3" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Yaw/VBoxContainer"]
layout_mode = 2
max_value = 1.0
fill_mode = 1
show_percentage = false

[node name="VBoxContainer2" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Yaw"]
layout_mode = 2
size_flags_horizontal = 3

[node name="YawRight" parent="settings/ScrollContainer/VBoxContainer/Yaw/VBoxContainer2" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
text = "→ Yaw Right"
action_name = "yaw_right"

[node name="ProgressBar4" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Yaw/VBoxContainer2"]
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="Throttle" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Throttle"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/ScrollContainer/VBoxContainer/Throttle/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Throttle"

[node name="CheckBox" type="CheckBox" parent="settings/ScrollContainer/VBoxContainer/Throttle/HBoxContainer"]
layout_mode = 2
tooltip_text = "make the throttle 0 when the stick is centered
(use this if you are using a game controller and not a FPV controller)"
focus_mode = 1
text = "Throttle 0 at center stick"
alignment = 2

[node name="ProgressBar4" type="ProgressBar" parent="settings/ScrollContainer/VBoxContainer/Throttle"]
layout_mode = 2
max_value = 1.0
show_percentage = false

[node name="ThrottleUp" parent="settings/ScrollContainer/VBoxContainer/Throttle" instance=ExtResource("1_s8nf5")]
layout_mode = 2
text = "Throttle Up"
action_name = "throttle_up"

[node name="ThrottleDown" parent="settings/ScrollContainer/VBoxContainer/Throttle" instance=ExtResource("1_s8nf5")]
layout_mode = 2
text = "Throttle Down"
action_name = "throttle_down"

[node name="Label4" type="Label" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Switches"

[node name="Switches" type="VBoxContainer" parent="settings/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Arm" type="HBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Switches"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/ScrollContainer/VBoxContainer/Switches/Arm"]
layout_mode = 2
size_flags_horizontal = 3
text = "Arm"

[node name="KeybindButton" parent="settings/ScrollContainer/VBoxContainer/Switches/Arm" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
action_name = "arm"

[node name="Label2" type="Label" parent="settings/ScrollContainer/VBoxContainer/Switches/Arm"]
layout_mode = 2
text = "toggle"

[node name="CheckBox" type="CheckBox" parent="settings/ScrollContainer/VBoxContainer/Switches/Arm"]
layout_mode = 2

[node name="Reset" type="HBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Switches"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/ScrollContainer/VBoxContainer/Switches/Reset"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reset
"

[node name="KeybindButton" parent="settings/ScrollContainer/VBoxContainer/Switches/Reset" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
action_name = "reset"

[node name="SelfRight" type="HBoxContainer" parent="settings/ScrollContainer/VBoxContainer/Switches"]
layout_mode = 2

[node name="Label" type="Label" parent="settings/ScrollContainer/VBoxContainer/Switches/SelfRight"]
layout_mode = 2
size_flags_horizontal = 3
text = "Self Right
"

[node name="KeybindButton" parent="settings/ScrollContainer/VBoxContainer/Switches/SelfRight" instance=ExtResource("1_s8nf5")]
layout_mode = 2
size_flags_horizontal = 3
action_name = "self_right"

[node name="Example" type="VBoxContainer" parent="settings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewportContainer" type="SubViewportContainer" parent="settings/Example"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="settings/Example/ViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(554, 608)
render_target_update_mode = 4

[node name="transform" parent="settings/Example/ViewportContainer/SubViewport" instance=ExtResource("2_og0rt")]

[node name="Cube" parent="settings/Example/ViewportContainer/SubViewport/transform" index="0"]
material_override = SubResource("StandardMaterial3D_2h2af")

[node name="Camera3D" type="Camera3D" parent="settings/Example/ViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, 8.74227e-08, 0, 0.999999, 0, -8.74228e-08, 0, -0.999999, 2.74705e-07, 0, -47.0216)
projection = 1
size = 110.981

[node name="WorldEnvironment" type="WorldEnvironment" parent="settings/Example/ViewportContainer/SubViewport"]
environment = SubResource("Environment_sapd5")

[connection signal="toggled" from="settings/ScrollContainer/VBoxContainer/Throttle/HBoxContainer/CheckBox" to="." method="_on_throttle_zero_center_check_box_toggled"]
[connection signal="toggled" from="settings/ScrollContainer/VBoxContainer/Switches/Arm/CheckBox" to="." method="_on_arm_check_box_toggled"]

[editable path="settings/Example/ViewportContainer/SubViewport/transform"]
